@@ -3,6 +3,7 @@
 	* pykickstart/parser.py (KickstartParser._stateMachine):  Add support
 	for the %end directive, and issue DeprecationWarnings if it's not
 	used.  It will be a long time before the old syntax goes away, though.
+	(KickstartParser._stateMachine):  We only need one script state.
 
 	* validator/ksvalidator:  Don't leave downloaded ks files on the
 	system if pykickstart hits a traceback.
